...
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/recipe_feed_image"
            app:layout_constraintStart_toEndOf="@+id/recipe_feed_image"
            app:layout_constraintTop_toBottomOf="@+id/recipe_feed_title" />

        <Button
            android:id="@+id/recipe_feed_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="8dp"
...
